created hmtl fragments in templates

--- a/src/main/webapp/templates/footer.html
+++ b/src/main/webapp/templates/footer.html
@@ -2,13 +2,11 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <body>
 
-<div th:fragment="copy">
-    <div class="card">
-        <div class="card-body">
-            &copy; 2019 Codecool Budapest
-        </div>
+<footer th:fragment="copy" class="footer mt-auto py-3">
+    <div class="container justify-content-center">
+        <span class="text-muted">&copy; 2021 Ghitescu Adrian - adrianghitescu0713@gmail.com</span>
     </div>
-</div>
+</footer>
 
 </body>
 </html>
