slight template fix

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -7,6 +7,9 @@
 
     <title>Unreasonable Shop</title>
 
+    <script type="text/javascript" src="https://www.paypal.com/sdk/js?client-id=AcORJzMPG2ivrk1kaivgpEKK6cvKO9zuOLbM1wR-A5165TgJtCO41G605ozOnMoFjhhdxdQOWiveLYAH" data-namespace="paypal_sdk" async defer></script>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script type='module' src='/static/js/main.js' defer="defer"></script>
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
 
