--- a/src/main/webapp/templates/section.html
+++ b/src/main/webapp/templates/section.html
@@ -4,7 +4,7 @@
 
 <section th:fragment="copy" style="padding: 13rem 0 5rem 2rem; width: 60%;" class="transparent">
     <div style="padding-bottom: 5px" class="d-flex justify-content-start transparent">
-        <strong class="fs-5" th:text="${subcategory.name}">Title</strong>
+        <strong id="subcategoryMainTitle" class="fs-5" th:text="${subcategory.name}">Title</strong>
     </div>
 
     <div id="productsParent" class="transparent">
