changed shop name

--- a/src/main/webapp/templates/navbars.html
+++ b/src/main/webapp/templates/navbars.html
@@ -6,7 +6,7 @@
     <nav class="navbar navbar-light">
         <div class="container-fluid d-flex">
             <a></a>
-            <a href="/" style="color: whitesmoke" class="navbar-brand fs-1 font-monospace float-end">Unreasonable Shop</a>
+            <a href="/" style="color: whitesmoke" class="navbar-brand fs-1 font-monospace float-end">Online Shop</a>
         </div>
     </nav>
 
