--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -5,7 +5,7 @@
     <meta name="author" content="Codecool" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <title>Unreasonable Shop</title>
+    <title>Online Shop</title>
 
     <script type="text/javascript" src="https://www.paypal.com/sdk/js?client-id=AcORJzMPG2ivrk1kaivgpEKK6cvKO9zuOLbM1wR-A5165TgJtCO41G605ozOnMoFjhhdxdQOWiveLYAH" data-namespace="paypal_sdk" async defer></script>
 
